# UBAG

./: .dockerignore  .gitattributes  .gitignore  .goreleaser.yaml  AGENTS.md  AGENT_HANDOFF.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_COVERAGE.md  LICENSE  Makefile  PRD.md  PROGRESS.md  README.md  SECURITY.md  UBAG_World_Class_Blueprint_v2.1.md  UBAG_World_Class_Blueprint_v2.md  _hostname_probe.go  design.md  docker-compose.small.yml  docker-compose.vps.yml  licensing.md  package.json  pnpm-lock.yaml
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: README.md
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/worker/: README.md  pyproject.toml  run_chat_reaper.py  run_live_worker.py  run_mock_worker.py  run_worker_daemon.py
apps/worker/tests/: test_adapter_base.py  test_adapter_registry.py  test_attachments.py  test_audio_attach.py  test_bulkhead_orchestrator.py  test_bulkhead_runtime.py  test_chat_ledger.py  test_conversation_turn_read.py  test_drift.py  test_engines.py  test_humanized.py  test_live_adapters.py  test_live_orchestration.py  test_navigation_abort.py  test_normalize.py  test_novnc_base_url.py  test_obs.py  test_orchestration_aimd.py  test_orchestration_channel_pool.py  test_orchestration_pacer.py  test_orchestration_scheduler.py  test_orchestration_telemetry.py  test_orchestration_topology.py  test_provider_config.py  test_recording.py  test_region.py  test_remote_grid.py  test_runner.py  test_shutdown.py  test_warm_daemon.py  test_warm_daemon_protocol.py  test_warm_reuse.py
apps/worker/ubag_worker/: __init__.py  adapter_registry.py  cli.py  region.py  runner.py
apps/worker/ubag_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/worker/ubag_worker/adapters/: __init__.py
apps/worker/ubag_worker/drift/: __init__.py  detector.py
apps/worker/ubag_worker/live/: ONBOARDING.md  __init__.py  chat_ledger.py  daemon.py  daemon_protocol.py  engine.py  engines.py  events.py  humanized.py  orchestrator.py  page_driver.py  recording.py  remote.py  selectors.py
(+861 files in other folders)
